--- a/templates/map.html
+++ b/templates/map.html
@@ -13,11 +13,11 @@
     <div id="map"></div>
     
     <div class="container" id="captureButton">
-      <p><button id="addButton" type="button" class="btn">Add this Nature Strip to MONSA Gallery</button></p>
+      <p><button id="addButton" type="button" class="btn">Add Nature Strip to Gallery</button></p>
     </div>
 
-    <div id="mapBlurb" class="container">
-      <p> Map of the best Nature Strips. If you know a great nature strip, please add it.  Locate it on the map above. Zoom to the street view and then press the add nature strip button</p>
+    <div class="container" id="mapBlurb">
+      <p> Add Nature Strips to the MONSA gallery. Locate using map above, zoom to the street view and then click on "Add Nature Strip to Gallery". </p>
     </div>
     
     <script src="{{ url_for('static', filename='scripts_map.js') }}"></script>
