--- a/static/styles_map.css
+++ b/static/styles_map.css
@@ -2,16 +2,23 @@
 /* Always set the map height explicitly to define the size of the div
  * element that contains the map. */
 #map {
-  height: 100%;
-  margin: 50px 0 200px 0;
+  height: 98%;
+  margin: 50px 0 100px 0;
 
 }
 /* Optional: Makes the sample page fill the window. */
-html, body {
-  height: 90%;
+html {
+  height: 100%;
   margin: 0;
   padding: 0;
 }
+
+body {
+  height: 90%;
+  margin: 0 0 30px 0;
+  padding: 0;
+}
+
 #description {
   font-family: Roboto;
   font-size: 15px;
@@ -60,11 +67,12 @@ html, body {
 
 #pac-input {
   background-color: #fff;
-  font-family: Roboto;
+  /*font-family: Roboto;*/
+  /*font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;*/
   font-size: 15px;
   font-weight: 300;
   margin-left: 25%;
-  margin-top: 25px;
+  margin-top: 10px;
   padding: 0 11px 0 13px;
   text-overflow: ellipsis;
   width: 30%;
@@ -86,17 +94,27 @@ html, body {
 }
 
 #addButton {
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  /*background-color: #ddd;*/
+  background-color: #4d90fe;
+  color: white;
+  /*font-family: Roboto;*/
   position: absolute;
   right: 50px;
-  bottom: 75px;
+  bottom: 50px;
   z-index: 10;
 }
 
 #mapBlurb {
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  background-color: black;
+  color: white;
+  /*font-family: Roboto;*/
   position: absolute;
-  left: 10px;
-  bottom: 10px;
+  left: 20px;
+  bottom: 50px;
   z-index: 10;
+  padding: 5px;
+  width: 20%;
+
 }
-
-
