--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -3,6 +3,9 @@
 
   <link href="{{ url_for('static', filename='styles_gallery.css') }}" rel="stylesheet"/>
 
+  {% block mainpageJumbo %}
+  {% endblock %}
+
   <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="false">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -14,20 +17,21 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-        <img src="https://maps.googleapis.com/maps/api/streetview?size=600x300&location=45.4855305,-122.7032018&fov=100&heading=266.57&key=AIzaSyCssINvVOAV0n5dZmZLtpgfmMqvCBhuJPo" alt="First one">
+        
+        <img src="{{ firstItem['picUrl'] }}" alt="First one">
         <div class="carousel-caption">
-          <p>Address: 5132 SW Richardson Drive Portland Oregon USA </p>
-          <p>Artist Statement: Portland, oh Portland. </p>
+          <p>Address: {{ firstItem['address'] }} &emsp; Peoples Choice Votes: {{ firstItem['score'] }} &emsp; Artist Statement: {{ firstItem['artistStatement'] }}
+          <button id="upVoteButton1" type="button" class="btn" value="{{ firstItem['id'] }}"> Upvote this Nature Strip</button></p>
         </div>
       </div>
       
-      {% for address, v in picItems.items() %} 
+      {% for pic in picItems %} 
         <div class="item">
-          <img src="{{ v['picUrl'] }}" alt="Other">
+          <img src="{{ pic['picUrl'] }}" alt="Other">
           <div class="container">
             <div class="carousel-caption">
-              <p>Address: {{ address }}</p>
-              <p>Artist Statement: {{ v['artistStatement'] }} </p>
+              <p>Address: {{ pic['address'] }}  &emsp; Peoples Choice Votes: {{ pic['score'] }} &emsp; Artist Statement: {{ pic['artistStatement'] }}
+              <button id="upVoteButton2" type="button" class="btn" value="{{ pic['id'] }}"> Upvote this Nature Strip</button>
             </div>
           </div>
         </div>
@@ -44,7 +48,9 @@
       <span class="glyphicon glyphicon-chevron-right"></span>
       <span class="sr-only">Next</span>
     </a>
+ 
   </div>
 
+  <script src="{{ url_for('static', filename='scripts_gallery.js') }}"></script>
 
 {% endblock %}
