--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,31 +11,15 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#"><div id="pageName">Museum of Nature-Strip Art</div></a>
+        
+        <a class="navbar-brand" href="#"><div id="pageName"><img id="plantIcon" SRC='/static/images/plant.png'>  MONSA Museum of Nature-Strip Art</div></a>
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a href={{ url_for('gallery') }}>Home</a></li>
-          <li><a href={{ url_for('about') }}>About</a></li>
-          <li><a href={{ url_for('map') }}>Map</a></li>
+          <li class="active"><a href={{ url_for('mainpage') }}>Home</a></li>
           <li><a href={{ url_for('gallery') }}>Gallery</a></li>
-          <!--<li class="dropdown">-->
-          <!--  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>-->
-          <!--  <ul class="dropdown-menu">-->
-          <!--    <li><a href="#">Action</a></li>-->
-          <!--    <li><a href="#">Another action</a></li>-->
-          <!--    <li><a href="#">Something else here</a></li>-->
-          <!--    <li role="separator" class="divider"></li>-->
-          <!--    <li class="dropdown-header">Nav header</li>-->
-          <!--    <li><a href="#">Separated link</a></li>-->
-          <!--    <li><a href="#">One more separated link</a></li>-->
-          <!--  </ul>-->
-          <!--</li>-->
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="../navbar/">Default</a></li>
-          <li><a href="../navbar-static-top/">Static top</a></li>
-          <li class="active"><a href="./">Fixed top <span class="sr-only">(current)</span></a></li>
+          <li><a href={{ url_for('map') }}>Map</a></li>
+          <li><a href={{ url_for('about') }}>About</a></li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
