--- a/static/styles_map.css
+++ b/static/styles_map.css
@@ -106,15 +106,15 @@ body {
 }
 
 #mapBlurb {
+  border-radius: 25px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
   background-color: black;
   color: white;
-  /*font-family: Roboto;*/
   position: absolute;
   left: 20px;
   bottom: 50px;
   z-index: 10;
-  padding: 5px;
+  padding: 10px;
   width: 20%;
 
 }
